--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,6 @@
 
 Guides, Howtos and other useful OpenShift information
 
-- link:blogs/add_configmap_to_deployment[Add multiple ConfigMaps or Secrets to an OpenShift Deployment]
-- link:blogs/configure_nfs_pv[Create a NFS persistent volume and use it as a storage for OpenShift 4.x registry]
-- link:blogs/local_docker_image_deployment_to_ocp[Deploy a docker image from your private registry to OpenShift 4.x]
+- link:blogs/add_configmap_to_deployment.adoc[Add multiple ConfigMaps or Secrets to an OpenShift Deployment]
+- link:blogs/configure_nfs_pv.adoc[Create a NFS persistent volume and use it as a storage for OpenShift 4.x registry]
+- link:blogs/local_docker_image_deployment_to_ocp.adoc[Deploy a docker image from your private registry to OpenShift 4.x]
