add https to docker login

--- a/blogs/local_docker_image_deployment_to_ocp.adoc
+++ b/blogs/local_docker_image_deployment_to_ocp.adoc
@@ -41,7 +41,7 @@ NOTE: that OPENSHIFT_PROJECT_NAME is the name of the OpenShift namespece where I
 Before you can push images into internal OpenShift registry you need to log into it.
 You will have to use a token to do that. Kubeadmin password would not work.
 
- $ docker login -u 'oc whoami' -p 'oc whoami --show-token' default-route-openshift-image-registry.apps.MY_DOMAINNAME
+ $ docker login -u 'oc whoami' -p 'oc whoami --show-token' https://default-route-openshift-image-registry.apps.MY_DOMAINNAME
 
  $ docker push default-route-openshift-image-registry.apps.MY_DOMAINNAME/OPENSHIFT_PROJECT_NAME/MY_APP:VERSION
 
